Fixed missing background for .btn class

--- a/client/src/components/controls/button.css
+++ b/client/src/components/controls/button.css
@@ -1,4 +1,4 @@
-.btn {
+button.btn {
     font-family: inherit;
     font-size: inherit;
     font-weight: inherit;
@@ -14,51 +14,53 @@
     transition: background-color 0.2s, box-shadow 0.2s;
     user-select: none;
 }
-.btn iconify-icon {
+button.btn iconify-icon,
+button.btn svg {
     filter: drop-shadow(0 1px 0 rgba(0,0,0,20%));
 }
-.btn:hover {
+button.btn:hover {
     background-color: rgba(0,0,0,7%);
 }
-.btn:active {
+button.btn:active {
     background-color: rgba(0,0,0,16%);
     border-bottom: 2px solid rgba(0,0,0,8%);
 }
-.btn:focus {
+button.btn:focus {
     box-shadow: 0 0 0 1px rgba(0,0,0,20%);
 }
-.btn.btn-green {
+button.btn.btn-green {
     background-color: #69cd78;
     color: white;
     text-shadow: 0 1px 0 rgba(0,0,0,30%);
 }
-.btn.btn-green:hover {
+button.btn.btn-green:hover {
     background-color: #72da81;
 }
-.btn.btn-green:active {
+button.btn.btn-green:active {
     background-color: #62c172;
 }
-.btn.btn-red {
+button.btn.btn-red {
     background-color: #e65c5c;
     color: white;
     text-shadow: 0 1px 0 rgba(0,0,0,40%);
 }
-.btn.btn-red:hover {
+button.btn.btn-red:hover {
     background-color: #f27171;
 }
-.btn.btn-red:active {
+button.btn.btn-red:active {
     background-color: #cf5a5a;
 }
-.btn label {
+button.btn label {
     display: inline-block;
     margin: 0;
     padding: 0;
 }
-.btn iconify-icon {
+button.btn iconify-icon,
+button.btn svg {
     font-size: 18px;
     margin: -4px 0 -4px -4px;
 }
-.btn[disabled] {
+button.btn[disabled] {
     color: #888;
     background-color: rgba(0,0,0,6%);
     border-bottom: 2px solid rgba(0,0,0,8%);
